ecmascript/parser/tests/typescript-errors/tsc/es6/memberFunctionDeclarations/MemberFunctionDeclaration4_es6/input.ts.stderr
error[1005]: Expected a property name
 --> $DIR/tests/typescript-errors/tsc/es6/memberFunctionDeclarations/MemberFunctionDeclaration4_es6/input.ts:3:5
  |
3 |    *() { }
  |     ^

